# BitCommit

./: Cargo.toml  Makefile  README.md  main.toml  protocoll
bitcommit/: Cargo.toml  Makefile  README.md  STRUCTURE.md
bitcommit/libs/container/src/: go.rs  lib.rs
bitcommit/libs/rsync/: Cargo.toml  rsync.h  socket.c
bitcommit/libs/rsync/src/: lib.rs  socket.rs
bitcommit/libs/tests/rsync/: rsync.rs
bitcommit/libs/webserver/: Cargo.toml  [
bitcommit/libs/webserver/src/: lib.rs  tests.rs
libs/container/: Cargo.toml
libs/container/src/: lib.rs
libs/git/: Cargo.toml
libs/git/src/: lib.rs
libs/rsync/: Cargo.toml
libs/tests/webserver/: webserver.rs
