[package]
name = "bitcommit"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bitcommit"

[workspace]
members = [
  "libs/container",
  "libs/webserver",
  "libs/rsync",
  "libs/git",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
